Continue German translation of scripts, including fixes from Sven Joachim

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ dpkg (1.14.19) UNRELEASED; urgency=low
   * German (Helge Kreutzmann).
 
   [ Updated scripts translations ]
+  * German (Helge Kreutzmann).
   * Polish (Robert Luberda).
   * Swedish (Peter Karlsson).
 
