--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-22  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* de.po: Updated to 448t0f20u.
+
 2008-04-20 Robert Luberda  <robert@debian.org>
 
 	* pl.po: Updated to 449t6f13u.
