--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg scripts\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-04-08 07:01+0300\n"
-"PO-Revision-Date: 2008-04-21 21:20+0200\n"
+"PO-Revision-Date: 2008-04-22 22:01+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -83,7 +83,7 @@ msgstr ""
 "Verwendung: %s [<Option> ...] [<Aktion>]\n"
 "\n"
 "Optionen:\n"
-"  -a<Debian-Arch>    setzte die aktuelle Debian-Architektur.\n"
+"  -a<Debian-Arch>    setze die aktuelle Debian-Architektur.\n"
 "  -t<GNU-System>     setze den aktuellen GNU-Systemtyp.\n"
 "  -L                 liste gültige Architekturen auf.\n"
 "  -f                 Zwang-Schalter (überschreibe in der Umgebung gesetzte\n"
@@ -94,9 +94,9 @@ msgstr ""
 "  -e<Debian-Arch>    vergleiche mit aktueller Debian-Architektur.\n"
 "  -i<Arch-Alias>     prüfe, ob aktuelle Debian-Architektur <Arch-Alias> "
 "ist.\n"
-"  -q<Variable>       gibt nur den Wert der von <Variable> aus.\n"
+"  -q<Variable>       gibt nur den Wert der <Variable>n aus.\n"
 "  -s                 gibt den Befehl zum Setzen von Umgebungsvariablen aus.\n"
-"  -u                 gibt den Befehl um Löschen von Umgebungsvariablen aus.\n"
+"  -u                 gibt den Befehl zum Löschen von Umgebungsvariablen aus.\n"
 "  -c <Befehl>        setzt Umgebung und führt darin den Befehl aus.\n"
 "  --help             zeigt diese Hilfemeldung.\n"
 "  --version          zeigt die Version.\n"
@@ -256,7 +256,7 @@ msgstr ""
 "                                                          } weitergegeben\n"
 "  --admindir=<Verz>\n"
 "                 ändere das administrative Verzeichnis.\n"
-"  -h, --help     zeige diese Hilfe.\n"
+"  -h, --help     zeigt diese Hilfemeldung.\n"
 "      --version  zeige die Version.\n"
 
 #: scripts/dpkg-buildpackage.pl:155 scripts/dpkg-buildpackage.pl:165
@@ -338,7 +338,7 @@ msgstr "Dies ist eine mit -S nicht-fatale Warnung, allerdings"
 
 #: scripts/dpkg-buildpackage.pl:345
 msgid "will probably become fatal in the future."
-msgstr "wird sie wahrschinlich in der Zukunft fatal werden."
+msgstr "wird sie wahrscheinlich in der Zukunft fatal werden."
 
 #: scripts/dpkg-buildpackage.pl:369
 msgid "Press the return key to start signing process\n"
@@ -462,8 +462,8 @@ msgstr ""
 "\n"
 "Optionen:\n"
 "  -f<Dateilistedatei>      Dateien hierin statt in debian/files schreiben.\n"
-"  -h, --help               zeige diese Hilfe.\n"
-"      --version            zeige die Version.\n"
+"  -h, --help               zeigt diese Hilfemeldung..\n"
+"      --version            zeigt die Version.\n"
 
 #: scripts/dpkg-distaddfile.pl:55
 msgid "need exactly a filename, section and priority"
@@ -479,7 +479,7 @@ msgstr "öffne neue Dateienliste-Datei"
 
 #: scripts/dpkg-distaddfile.pl:67 scripts/dpkg-gencontrol.pl:330
 msgid "copy old entry to new files list file"
-msgstr "kopiere alten Eintrag in neue Datein-Listdatei"
+msgstr "kopiere alten Eintrag in neue Dateienlist-Datei"
 
 #: scripts/dpkg-distaddfile.pl:70 scripts/dpkg-gencontrol.pl:334
 msgid "read old files list file"
@@ -769,8 +769,8 @@ msgstr ""
 "\n"
 "Optionen:\n"
 "  -p<Paket>               gebe Steuerdatei für Paket aus.\n"
-"  -c<Steuerdatei>         hohle Steuerinformationen aus dieser Datei.\n"
-"  -l<Changelogdatei>      hohle pro-Versions-Informationen aus dieser "
+"  -c<Steuerdatei>         hole Steuerinformationen aus dieser Datei.\n"
+"  -l<Changelogdatei>      hole pro-Versions-Informationen aus dieser "
 "Datei.\n"
 "  -F<Changelogformat>     erzwinge Changelogformat.\n"
 "  -v<erzwinge_Version>    setze die Version des Binärpakets.\n"
@@ -916,7 +916,7 @@ msgstr ""
 "  -O<Datei>                schreibe in <Datei> nicht .../DEBIAN/symbols.\n"
 "  -O                       schreibe nach Stdout nicht .../DEBIAN/symbols.\n"
 "  -d                       zeige bei Arbeit Debug-Informationen an.\n"
-"  -h, --help               zeige diese Hilfenachricht.\n"
+"  -h, --help               zeige diese Hilfemeldung.\n"
 "      --version            zeige die Version.\n"
 
 #: scripts/dpkg-gensymbols.pl:147
@@ -1162,11 +1162,11 @@ msgstr "konnte Stdout nicht schließen"
 
 #: scripts/dpkg-scanpackages.pl:270
 msgid "** Packages in archive but missing from override file: **"
-msgstr "** Paket ist im Archiv, aber fehlt in Override-Datei: **"
+msgstr "** Pakete im Archiv, die aber in Override-Datei fehlen: **"
 
 #: scripts/dpkg-scanpackages.pl:274
 msgid " ++ Packages in override file with incorrect old maintainer value: ++"
-msgstr " ++ Pakete in Override-Datei mit ungültigen alten Betreuer-Wert: ++"
+msgstr " ++ Pakete in Override-Datei mit ungültigem alten Betreuer-Wert: ++"
 
 #: scripts/dpkg-scanpackages.pl:280
 msgid " -- Packages specifying same maintainer as override file: --"
@@ -1238,7 +1238,7 @@ msgstr "ignoriere doppelte Override-Einträge für %s in Zeile %d"
 #: scripts/dpkg-scansources.pl:177
 #, perl-format
 msgid "ignoring override entry for %s, invalid priority %s"
-msgstr "ignoriere Orverride-Eintrag für %s, ungültige Priorität %s"
+msgstr "ignoriere Override-Eintrag für %s, ungültige Priorität %s"
 
 #: scripts/dpkg-scansources.pl:196
 msgid "error closing override file:"
@@ -1415,7 +1415,7 @@ msgstr "öffne neue Substvars-Datei »%s«"
 #: scripts/dpkg-shlibdeps.pl:371
 #, perl-format
 msgid "open old varlist file `%s' for reading"
-msgstr "öffne alte Varlist-Datei »%s« zum Schreiben"
+msgstr "öffne alte Varlist-Datei »%s« zum Lesen"
 
 #: scripts/dpkg-shlibdeps.pl:374
 #, perl-format
@@ -1668,7 +1668,7 @@ msgid ""
 msgstr ""
 "\n"
 "Copyright (C) 1996 Ian Jackson und Klee Dienes.\n"
-"Copyright (C) 2001 Wichert Akkerman"
+"Copyright (C) 2008 Raphael Hertzog"
 
 #: scripts/dpkg-source.pl:352
 #, perl-format
@@ -1733,7 +1733,7 @@ msgstr ""
 "  -i[<Regaus>]             Filter Dateien heraus, deren Diffs ignoriert werden\n"
 "                             (Vorgabe: »%s«).\n"
 "  -I[<Muster>]             Dateien beim Bauen des Tarballs herausfiltern.\n"
-"                             (Vorgabe: %s).\n"  FIXME im Original
+"                             (Vorgabe: %s).\n"
 "  -Z<Komprimierung>        wähle zu verwendene Kompression aus (Vorgabe:\n"
 "                             »gzip«, unterstützt werden: %s)\n"
 "  -z<Stufe>                wähle zu verwendende Kompressionsstufe (Vorgabe:\n"
@@ -2282,7 +2282,7 @@ msgstr "Kann Symbole von Objekten ohne SONAME nicht zusammenführen."
 
 #: scripts/Dpkg/Source/Archive.pm:58
 msgid "write on tar input"
-msgstr "warte auf Tar-Eingabe"
+msgstr "schreibe auf Tar-Eingabe"
 
 #: scripts/Dpkg/Source/Archive.pm:83
 msgid "close on tar input"
@@ -2362,7 +2362,7 @@ msgstr "kann Link %s nicht lesen"
 #: scripts/Dpkg/Source/Patch.pm:185
 #, perl-format
 msgid "newly created empty file '%s' will not be represented in diff"
-msgstr "neu-erstellte leere Datei »%s« wird im Diff nicht dargestellt werden"
+msgstr "neu erstellte leere Datei »%s« wird im Diff nicht dargestellt werden"
 
 #: scripts/Dpkg/Source/Patch.pm:189
 #, perl-format
@@ -2425,7 +2425,7 @@ msgstr "  alte Version ist %s"
 #: scripts/Dpkg/Source/Patch.pm:294
 #, perl-format
 msgid "expected ^--- in line %d of diff `%s'"
-msgstr "unerwartes ^--- in Zeile %d des Diffs »%s«"
+msgstr "erwartes ^--- in Zeile %d des Diffs »%s«"
 
 #: scripts/Dpkg/Source/Patch.pm:298
 #, perl-format
@@ -2445,7 +2445,7 @@ msgstr "Diff »%s« endet in der Mitte von ---/+++ (Zeile %d)"
 #: scripts/Dpkg/Source/Patch.pm:310 scripts/Dpkg/Source/Patch.pm:320
 #, perl-format
 msgid "line after --- isn't as expected in diff `%s' (line %d)"
-msgstr "Zeile nach --- wird im Diff »%s« (Zeile %d) nicht erwartet"
+msgstr "Zeile nach --- ist im Diff »%s« (Zeile %d) nicht wie erwartet"
 
 #: scripts/Dpkg/Source/Patch.pm:315
 #, perl-format
@@ -2582,7 +2582,7 @@ msgstr "Fehler beim Überprüfen der Signatur von %s"
 #: scripts/Dpkg/Source/Package.pm:276
 #, perl-format
 msgid "could not verify signature on %s since gpg isn't installed"
-msgstr "konnte Signatur von %s nicht überprüfen, das gpg nicht installiert ist"
+msgstr "konnte Signatur von %s nicht überprüfen, da Gpg nicht installiert ist"
 
 #: scripts/Dpkg/Source/Package.pm:285
 #, perl-format
@@ -2612,7 +2612,7 @@ msgstr "versuchte zweimal Datei »%s« hinzuzufügen"
 #: scripts/Dpkg/Source/Package/V1_0.pm:52
 #, perl-format
 msgid "-s%s option overrides earlier -s%s option"
-msgstr "Option -s%s vorhergehende Option -s%s"
+msgstr "Option -s%s überschreibt vorhergehende Option -s%s"
 
 #: scripts/Dpkg/Source/Package/V1_0.pm:68
 #, perl-format
@@ -2685,8 +2685,8 @@ msgid ""
 "-b takes at most a directory and an orig source argument (with v1.0 source "
 "package)"
 msgstr ""
-"-b nimmt höchstens ein Verzeichnis und eine Originalquelle als Argument (mit "
-"v1.0-Quellpaket)"
+"-b akzeptiert höchstens ein Verzeichnis und eine Originalquelle als Argument "
+"(mit v1.0-Quellpaket)"
 
 #: scripts/Dpkg/Source/Package/V1_0.pm:168
 #, perl-format
@@ -2778,7 +2778,7 @@ msgstr "kann Existenz von »%s« nicht überprüfen"
 #: scripts/Dpkg/Source/Package/V3_0/native.pm:93
 #, perl-format
 msgid "unable to rename `%s' (newly created) to `%s'"
-msgstr "konnte »%s« nicht in (neu erstelltes) »%s« umbenennen"
+msgstr "konnte »%s« (neu erstellt) nicht in »%s« umbenennen"
 
 #: scripts/Dpkg/Source/Package/V1_0.pm:298
 #: scripts/Dpkg/Source/Package/V1_0.pm:348
