dpkg-source: fix permissions of tarballs in native source packages
* scripts/Dpkg/Source/Package/V3_0/native.pm: Fix permissions of
generated tarballs to "666 & ~umask()".

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-04-25  Raphael Hertzog  <hertzog@debian.org>
+
+	* scripts/Dpkg/Source/Package/V3_0/native.pm: Fix permissions of
+	generated tarball to "666 & ~umask()".
+
 2008-04-14  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Fields.pm (find_custom_field, get_custom_field):
