--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,8 @@ dpkg (1.14.19) UNRELEASED; urgency=low
   * Fix dpkg-genchanges to detect udeb based on Package-Type control
     header instead of file extension analysis on uploaded files.
     Closes: #476113
+  * Fix dpkg-source to grant correct permissions to tarballs of native
+    source packages. Closes: #477784
   
   [ Helge Kreutzmann ]
   * Minor fixes and clarifications to man pages.
