Updated Swedish translation.
Updated man/po/sv.po to 1600t0f0u.
Updated po/sv.po to 984t.
Fixed old entry in scripts/po/ChangeLog (forgot to commit the change last time).

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-25  Peter Karlsson  <peterk@debian.org>
+
+	* sv.po: Updated to 984t.
+
 2008-04-20  Robert Luberda  <robert@debian.org>
 
 	* pl.po: Updated to 945t26f13u.
