--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -17,7 +17,7 @@
 
 2008-04-03  Peter Karlsson  <peterk@debian.org>
 
-	* sv.po: Updated to 467t.
+	* sv.po: Updated to 468t and fixed a typo.
 
 2008-04-01  Helge Kreutzmann  <debian@helgefjell.de>
 
