dpkg-source: parse correctly series files with patch options
* scripts/Dpkg/Source/Package/V3_0/quilt.pm: Parse correctly
series files with patch options and warn if something else than
-p1 is used.
* man/dpkg-source.1: Document how dpkg-source handles those patch
options in series files.

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,8 @@ dpkg (1.14.19) UNRELEASED; urgency=low
     dpkg-iasearch has been kept as popcon still reports a few installations.
   * Collapsed multiple conflicts of dpkg with old versions of dpkg-dev
     in a single Conflicts: dpkg-dev (<< 1.14.16).
+  * The "3.0 (quilt)" source package format now parses correctly series files
+    with patch options and warn if something else than -p1 is used.
   
   [ Helge Kreutzmann ]
   * Minor fixes and clarifications to man pages.
