--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2008-04-25  Raphael Hertzog  <hertzog@debian.org>
 
+	* scripts/Dpkg/Source/Package/V3_0/quilt.pm: Parse correctly
+	series files with patch options and warn if something else than
+	-p1 is used.
+	* man/dpkg-source.1: Document how dpkg-source handles those patch
+	options in series files.
+
+2008-04-25  Raphael Hertzog  <hertzog@debian.org>
+
 	* scripts/Dpkg/Source/Package/V3_0/native.pm: Fix permissions of
 	generated tarball to "666 & ~umask()".
 
