Update German dselect translation

--- a/dselect/po/ChangeLog
+++ b/dselect/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-25  Sven Joachim  <svenjoac@gmx.de>
+
+	* de.po: Reword translation of "purge" for consistency.
+
 2008-04-08  Guillem Jover  <guillem@debian.org>
 
 	* de.po, sv.po: Merged with dselect.pot.
