dpkg-source: change the logic to find the object used to unpack/build
* scripts/Dpkg/Source/Package.pm (upgrade_object_type): Instead
of using the full Format: version to deduce the perl object name
use only the major part of the version. The minor part is under
control of the corresponding object, that way they can evolve
and indicate that the source package has changed in a backwards
compatible way. See
http://lists.debian.org/debian-dpkg/2008/04/msg00045.html
Also add a new parameter to disable update of the minor version in
the Format field.
(initialize): Don't let the Format field be updated by
upgrade_object_type() as this function only loads information from
the .dsc into the object.
* scripts/Dpkg/Source/Package/**: Rename V1_0.pm into V1.pm,
V2_0.pm into V2.pm and V3_0/ into V3/. Fix perl package names
accordingly. Integrated a $CURRENT_MINOR_VERSION set to "0"
in all packages.
* scripts/Makefile.am, scripts/po/POTFILES.in: Update the lists
according to above file renames.

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,11 @@ dpkg (1.14.19) UNRELEASED; urgency=low
     in a single Conflicts: dpkg-dev (<< 1.14.16).
   * The "3.0 (quilt)" source package format now parses correctly series files
     with patch options and warn if something else than -p1 is used.
+  * Change the way dpkg-source finds the perl object to use to unpack/build
+    a source package to ignore the minor part of the Format: version.
+    For example "1.0" and "1.1" would both map to Dpkg::Source::Package::V1
+    instead of ::V1_0 and ::V1_1 before. Similarly "3.0 (quilt)" now maps to
+    ::V3::quilt instead of ::V3_0::quilt.
   
   [ Helge Kreutzmann ]
   * Minor fixes and clarifications to man pages.
