Understood that "they" is the plural non-gender form, translated it properly

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,5 +1,9 @@
 2008-04-22  Helge Kreutzmann  <debian@helgefjell.de>
 
+	* de.po: Fix a translation after seeing it in practice
+
+2008-04-22  Helge Kreutzmann  <debian@helgefjell.de>
+
 	* de.po: Updated to 448t0f20u.
 
 2008-04-20 Robert Luberda  <robert@debian.org>
