--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg scripts\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-04-08 07:01+0300\n"
-"PO-Revision-Date: 2008-04-22 22:01+0200\n"
+"PO-Revision-Date: 2008-04-26 16:31+0200\n"
 "Last-Translator: Helge Kreutzmann <debian@helgefjell.de>\n"
 "Language-Team: de <debian-l10n-german@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -1405,7 +1405,7 @@ msgid ""
 "against it (they use none of its symbols)."
 msgstr ""
 "Abhängigkeit von %s könnte vermieden werden, falls »%s« nicht unnötigerweise "
-"dagegen gelinkt wäre (sie verwenden keine seiner Symbole)."
+"dagegen gelinkt wäre (es verwendet keine seiner Symbole)."
 
 #: scripts/dpkg-shlibdeps.pl:368
 #, perl-format
