Add missing format specifier in Swedish translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-28  Sven Joachim  <svenjoac@gmx.de>
+
+	* sv.po: Add missing format specifier.
+
 2008-04-25  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated to 984t.
