--- a/po/sv.po
+++ b/po/sv.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: dpkg 1.14.15\n"
 "Report-Msgid-Bugs-To: debian-dpkg@lists.debian.org\n"
 "POT-Creation-Date: 2008-04-25 15:23+0100\n"
-"PO-Revision-Date: 2008-04-25 15:24+0100\n"
+"PO-Revision-Date: 2008-04-28 22:14+0200\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -2885,7 +2885,7 @@ msgid ""
 " (current status `%.250s' with no pending triggers)"
 msgstr ""
 "paketet %.250s är inte redo för hantering av utlösare\n"
-" (aktuell status är \".250s\" med inga förestående utlösare)"
+" (aktuell status är \"%.250s\" med inga förestående utlösare)"
 
 #: src/packages.c:334
 #, c-format
