--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-29  Guillem Jover  <guillem@debian.org>
+
+	* configure.ac: Bump version to 1.15.0~.
+
 2008-04-26  Raphael Hertzog  <hertzog@debian.org>
 
 	* scripts/Dpkg/Source/Package.pm (upgrade_object_type): Instead
