--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+dpkg (1.15.0) UNRELEASED; urgency=low
+
+
+ -- Guillem Jover <guillem@debian.org>  Tue, 29 Apr 2008 06:01:40 +0300
+
 dpkg (1.14.19) UNRELEASED; urgency=low
 
   [ Guillem Jover ]
