Updated Swedish translation.
scripts/po/sv.po: updated to 469t0f0u.
man/po/sv.po: updated to 1601t0f0u.

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -6,12 +6,12 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-04-29 06:54+0300\n"
-"PO-Revision-Date: 2008-04-25 16:07+0100\n"
+"PO-Revision-Date: 2008-04-29 06:35+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
+"Content-Transfer-Encoding: 8bit"
 
 # type: Plain text
 #: ../../man/822-date.1:2
@@ -9699,7 +9699,6 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/dpkg-source.1:363
-#, fuzzy
 msgid ""
 "All patches listed in B<debian/patches/debian.series> or B<debian/patches/"
 "series> are then applied.  If the former file is used and the latter one "
@@ -9716,14 +9715,21 @@ msgstr ""
 "patches/series> tillämpas sedan. Om den förstnämnda filen används och den "
 "sistnämnda inte existerar (eller är en symbolisk länk), kommer den senare "
 "att ersättas av en symbolisk länk till den första. Tanken är att göra det "
-"enklare att använda quilt till att hantera patchuppsättningen. Patcher kan "
-"ta bort filer."
+"enklare att använda quilt till att hantera patchuppsättningen. Observera "
+"att, även om B<dpkg-source> korrekt tolkar series-filer som använder "
+"explicita flaggor till patch-programmet (lagrade på kommandoraden efter "
+"patch-filnamnet och ett eller flera blanksteg), så ignoreras dessa "
+"flaggor och det förväntar sig att patchar kan tillämpas med flaggan "
+"B<-p1> till B<patch>. Det kommer därför visa en varning sådana flaggor "
+"upptäcks, och bygget kommer troligen att misslyckas."
 
 # type: Plain text
 #: ../../man/dpkg-source.1:365
 msgid ""
 "Similarly to quilt's default behaviour, the patches can remove files too."
 msgstr ""
+"Patchar kan även ta bort filer, på ungfär samma sätt som quilt normalt "
+"fungerar."
 
 # type: Plain text
 #: ../../man/dpkg-source.1:368
@@ -9980,15 +9986,14 @@ msgstr ""
 
 # type: Plain text
 #: ../../man/dpkg-source.1:463
-#, fuzzy
 msgid ""
 "Then the VCS specific part of the source directory is copied over to a "
 "temporary directory. Before this temporary directory is packed in a tarball, "
 "various cleanup are done to save space."
 msgstr ""
 "De VCS-specifika delarna av källkodskatalogen kommer därefter att kopieras "
-"över till en temporär katalog. Innan de packas i en tarboll utförs viss "
-"städning för att spara plats."
+"över till en temporär katalog. Innan den temporära katalogen packas i en "
+"tarboll utförs viss städning för att spara plats."
 
 # type: Plain text
 #: ../../man/dpkg-source.1:470
