--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-25  Peter Karlsson  <peterk@debian.org>
+
+	* po/sv.po: Updated to 1601t.
+
 2008-04-29  Guillem Jover  <guillem@debian.org>
 
 	* po/dpkg-man.pot: Regenerated.
