--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-03  Peter Karlsson  <peterk@debian.org>
+
+	* sv.po: Updated to 469t and fixed a typo.
+
 2008-04-29  Guillem Jover  <guillem@debian.org>
 
 	* dpkg-dev.pot: Regenerated.
