Fix-up last commit.

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,6 +1,6 @@
 2008-04-03  Peter Karlsson  <peterk@debian.org>
 
-	* sv.po: Updated to 469t and fixed a typo.
+	* sv.po: Updated to 469t.
 
 2008-04-29  Guillem Jover  <guillem@debian.org>
 
