--- a/scripts/po/sv.po
+++ b/scripts/po/sv.po
@@ -2990,7 +2990,7 @@ msgid ""
 "the series file (%s) contains unsupported options ('%s', line %s), dpkg-"
 "source might fail when applying patches."
 msgstr ""
-"serie-filen (%s) innehåller flaggor som inte stöds (\"%s\", rad %s), "
+"series-filen (%s) innehåller flaggor som inte stöds (\"%s\", rad %s), "
 "dpkg-source kanske kommer att misslyckas med att tillämpa patchar."
 
 #: scripts/Dpkg/Source/Package/V3/quilt.pm:114
