Continued German scripts translation, including minor fixes

--- a/scripts/po/ChangeLog
+++ b/scripts/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-29  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* de.po: Updated to 458t0f11u.
+
 2008-04-29  Peter Karlsson  <peterk@debian.org>
 
 	* sv.po: Updated to 469t.
