--- a/man/ChangeLog
+++ b/man/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-21  Helge Kreutzmann  <debian@helgefjell.de>
+
+	* po/de.po: Updated to 1583t0f18u.
+
 2008-04-29  Peter Karlsson  <peterk@debian.org>
 
 	* po/sv.po: Updated to 1601t.
