--- a/scripts/po/de.po
+++ b/scripts/po/de.po
@@ -3021,7 +3021,7 @@ msgstr "verändere .git/config um einige Einstellungen auszukommentieren"
 
 #: scripts/Dpkg/Source/Package/V3/git.pm:309
 #, perl-format
-msgid "unstable to append to %s"
+msgid "unable to append to %s"
 msgstr ""
 
 #: scripts/Dpkg/Source/Package/V3/git.pm:310
