--- a/scripts/po/dpkg-dev.pot
+++ b/scripts/po/dpkg-dev.pot
@@ -2586,7 +2586,7 @@ msgstr ""
 
 #: scripts/Dpkg/Source/Package/V3/git.pm:309
 #, perl-format
-msgid "unstable to append to %s"
+msgid "unable to append to %s"
 msgstr ""
 
 #: scripts/Dpkg/Source/Package/V3/git.pm:310
