--- a/scripts/po/fr.po
+++ b/scripts/po/fr.po
@@ -3021,7 +3021,7 @@ msgstr ""
 
 #: scripts/Dpkg/Source/Package/V3/git.pm:309
 #, fuzzy, perl-format
-msgid "unstable to append to %s"
+msgid "unable to append to %s"
 msgstr "impossible d'ouvrir le répertoire %s"
 
 #: scripts/Dpkg/Source/Package/V3/git.pm:310
