--- a/scripts/po/pl.po
+++ b/scripts/po/pl.po
@@ -3025,7 +3025,7 @@ msgstr ""
 
 #: scripts/Dpkg/Source/Package/V3/git.pm:309
 #, perl-format
-msgid "unstable to append to %s"
+msgid "unable to append to %s"
 msgstr "nie można dopisać do %s"
 
 #: scripts/Dpkg/Source/Package/V3/git.pm:310
