--- a/scripts/po/ru.po
+++ b/scripts/po/ru.po
@@ -2979,7 +2979,7 @@ msgstr ""
 
 #: scripts/Dpkg/Source/Package/V3/git.pm:309
 #, fuzzy, perl-format
-msgid "unstable to append to %s"
+msgid "unable to append to %s"
 msgstr "Невозможно открыть каталог %s"
 
 #: scripts/Dpkg/Source/Package/V3/git.pm:310
