--- a/scripts/po/sv.po
+++ b/scripts/po/sv.po
@@ -2977,7 +2977,7 @@ msgstr "modifierar .git/config för att kommentera ut några inställningar"
 
 #: scripts/Dpkg/Source/Package/V3/git.pm:309
 #, perl-format
-msgid "unstable to append to %s"
+msgid "unable to append to %s"
 msgstr "kunde inte lägga till till %s"
 
 #: scripts/Dpkg/Source/Package/V3/git.pm:310
