Updated Polish dpkg translation
* po/pl.po: Updated to 984t by Wiktor Wandachowicz.

--- a/debian/changelog
+++ b/debian/changelog
@@ -39,7 +39,7 @@ dpkg (1.14.19) UNRELEASED; urgency=low
   [ Updated dpkg translations ]
   * Galician (Jacobo Tarrio).
   * German (Sven Joachim).
-  * Polish (Robert Luberda).
+  * Polish (Wiktor Wandachowicz).
   * Portuguese (Miguel Figueiredo).
   * Swedish (Peter Karlsson).
 
