--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-04-31  Wiktor Wandachowicz <siryes@gmail.com>
+
+	* pl.po: Updated to 984t.
+
 2008-04-29  Guillem Jover  <guillem@debian.org>
 
 	* dpkg.pot: Regenerated.
