--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-05-02  Guillem Jover  <guillem@debian.org>
+
+	* scripts/update-alternatives.pl: Do not suggest manually changing
+	the alternative symlinks on verbose mode.
+
 2008-04-29  Guillem Jover  <guillem@debian.org>
 
 	* configure.ac: Bump version to 1.15.0~.
