--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 dpkg (1.15.0) UNRELEASED; urgency=low
 
+  * Do not suggest manually changing the alternative symlinks on
+    update-alternative's verbose mode. Closes: #412487
 
  -- Guillem Jover <guillem@debian.org>  Tue, 29 Apr 2008 06:01:40 +0300
 
