[intl:hu] initial git update - 818t

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-02  SZERVÁC Attila <sas@321.hu>
+
+        * hu.po: Updated to 818t.
+
 2008-04-31  Wiktor Wandachowicz <siryes@gmail.com>
 
 	* pl.po: Updated to 984t.
