--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-05-02  Miguel Figueiredo  <elmig@debianpt.org>
+
+	* pt.po: Updated to 984t.
+
 2008-04-20  Robert Luberda  <robert@debian.org>
 
 	* pl.po: Fix one missing space.
