--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ dpkg (1.15.0) UNRELEASED; urgency=low
   * Do not suggest manually changing the alternative symlinks on
     update-alternative's verbose mode. Closes: #412487
 
+  [ Updated dpkg translations ]
+  * Portuguese (Miguel Figueiredo).
+
  -- Guillem Jover <guillem@debian.org>  Tue, 29 Apr 2008 06:01:40 +0300
 
 dpkg (1.14.19) UNRELEASED; urgency=low
